--- a/src/style.css
+++ b/src/style.css
@@ -33,25 +33,36 @@ h1 {
 
 table {
   border-collapse: collapse;
-  width: 120%;
+  width: 100%;
   height: 5vh;
-  background-color: white;
-  border: 1px solid #cdd2cd;
+  border: 1px solid #b1b8b1;
+  background-color: #f2f2f2;
 }
 
 th,
 td {
   text-align: left;
-  padding-left: 40px;
+  padding: 12px 0 12px 40px;
+  font-size: 20px;
 }
 
 th {
-  /* background-color: #4caf50; */
   color: rgb(26, 2, 2);
 }
 
-tr:nth-child(even) {
+/* tr:nth-child(even) {
   background-color: #f2f2f2;
+} */
+
+.displayScore {
+  border: 1px solid #c9c4c4;
+  padding: 12px 250px 20px 50px;
+}
+
+.displayScore li {
+  margin-right: 50px;
+  font-size: 25px;
+  list-style-type: style;
 }
 
 form {
